# cohorta

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: ab_testing.md  cohort_analyze.md  ltv.md
scripts/: generate_data.py
sql/: ab_test.sql  cohorts.sql  init_schema.sql  ltv.sql
src/: cohort_analyze.py  experiment_engine.py  ltv.py
src/__marimo__/session/: cohort_analyze.py.json  experiment_engine.py.json  ltv.py.json
