[project]
name = "cohorta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.23.13",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "psycopg2>=2.9.12",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
